@@ -82,6 +82,8 @@ This file lists the incompatible changes between Version 2.x and older versions
     for polrootsmod (both have been deprecated for years). rootmod0 is just as
     obsolete.
   - matsolvemod0 is deprecated, use matsolvemod
+  - cmpiu / cmpiu, equaliu / equalui : no longer assume that t_INT argument
+    is non-negative
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
