@@ -5028,10 +5028,12 @@ INLINE GEN    cgetr(long x);
 INLINE GEN    cgetr_block(long prec);
 INLINE int    cmpir(GEN x, GEN y);
 INLINE int    cmpis(GEN x, long y);
+INLINE int    cmpiu(GEN x, ulong y);
 INLINE int    cmpri(GEN x, GEN y);
 INLINE int    cmprs(GEN x, long y);
 INLINE int    cmpsi(long x, GEN y);
 INLINE int    cmpsr(long x, GEN y);
+INLINE int    cmpui(ulong x, GEN y);
 INLINE GEN    cxtofp(GEN x, long prec);
 INLINE GEN    divii(GEN a, GEN b);
 INLINE void   diviiz(GEN x, GEN y, GEN z);
@@ -5065,6 +5067,8 @@ INLINE void   dvmdssz(long x, long y, GEN z, GEN t);
 INLINE ulong  dvmduBIL(ulong n, ulong *r);
 INLINE int    equalis(GEN x, long y);
 INLINE int    equalsi(long x, GEN y);
+INLINE int    equalui(ulong x, GEN y);
+INLINE int    equaliu(GEN x, ulong y);
 INLINE int    absequalui(ulong x, GEN y);
 INLINE ulong  ceildivuu(ulong a, ulong b);
 INLINE long   evalexpo(long x);
